include $(top_srcdir)/am/am_incl_common.am

# additional include paths necessary to compile the C++ library
# AM_CXXFLAGS += 

noinst_LIBRARIES = libapp.a

libapp_a_SOURCES = \
	acc_calibration_app/acc_calibration_app.cpp \
	attitude_filter_app/attitude_filter_app.cpp \
	factory_app.cpp \
	mk_app.cpp
