include $(top_srcdir)/am/am_incl_common.am

# additional include paths necessary to compile the C++ library
# AM_CXXFLAGS = 

noinst_LIBRARIES = libmodule.a

libmodule_a_SOURCES = \
	pp.cpp \
	pp_uss.cpp \
	pp_acc.cpp \
	pp_baro.cpp \
	pp_ir.cpp \
	coremod.cpp \
	fc_mpkg.cpp \
	ctrl_hover.cpp \
	ctrl_lateral.cpp \
	ctrl_zrate.cpp \
	ctrl_bump.cpp \
	ctrl_logfileplayer.cpp \
	ctrl_logger.cpp \
	ctrl_wifimeter.cpp \
	n_ff.cpp \
	filter_kalmancv.cpp \
	filter_fir.cpp \
	filter_median.cpp \
	PID.cpp \
	Bumper.cpp \
	sim_crrcsim.cpp \
	testcore.cpp \
	stat_meanvar.cpp \
	bridge_ivy.cpp \
	exec_timing.cpp
