include $(top_srcdir)/am/am_incl_common.am

# additional include paths necessary to compile the C++ library
# AM_CXXFLAGS = 

noinst_LIBRARIES = libmodule.a

libmodule_a_SOURCES = \
	modulebase.cpp \
	Bumper.cpp \
	PID.cpp \
	bridge_ivy.cpp \
	bridge_osc.cpp \
	ctrl_alt_simple.cpp \
	ctrl_bump.cpp \
	ctrl_lat_bump.cpp \
	ctrl_hover.cpp \
	ctrl_lateral.cpp \
	ctrl_logfileplayer.cpp \
	ctrl_logger.cpp \
	ctrl_wifimeter.cpp \
	ctrl_yaw.cpp \
	ctrl_zrate.cpp \
	exec_timing.cpp \
	fc_mpkg.cpp \
	filter_fir.cpp \
	filter_ma.cpp \
	filter_kalmancv.cpp \
	filter_median.cpp \
	n_ff.cpp \
	pp.cpp \
	pp_acc.cpp \
	pp_baro.cpp \
	pp_ir.cpp \
	pp_uss.cpp \
	plat_link_car.cpp \
	plat_link_crrcsim.cpp \
	plat_link_mk.cpp \
	stat_meanvar.cpp \
	testcore.cpp \
  ui_potibox.cpp
