include $(top_srcdir)/am/am_incl_common.am

# additional include paths necessary to compile the C++ library
# AM_CXXFLAGS += 

noinst_LIBRARIES = libprotocol.a

libprotocol_a_SOURCES = \
	protocol.cpp \
	mavlink_protocol.cpp \
	mkhuchlink_protocol.cpp \
	mklink_protocol.cpp \
	msplink_protocol.cpp \
	protocollayer.cpp \
	protocolstack.cpp \
	link_factory.cpp \
	mkpackage.cpp
