include $(top_srcdir)/am/am_incl_common.am

# additional include paths necessary to compile the C++ library
# AM_CXXFLAGS += 

noinst_LIBRARIES = libsensor.a

libsensor_a_SOURCES = \
	sensor.cpp \
	i2csensor.cpp \
	senbmp085.cpp \
	senhmc5843.cpp \
	sensrf02.cpp \
	senExpCtrl.cpp \
	sensor_factory.cpp \
	sensormanager.cpp
